# OAAS

./: .gitignore  .gitmodules  .travis.yml  README.md  USAGE.md  go.mod  go.sum  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  test.yml
api/: .gitignore  README.md  package-lock.json  package.json  requirements.txt  serverless.yml
api/api/: __init__.py  ddb.py  poll.py  reddit.py  utils.py
client/: .gitignore  README.md  client_secrets.example.json  config.example.yml  config.go  go.mod  go.sum  http.go  job.go  job_replay.go  main.go  obs.go  obs_controller.go  osu.go  osu_controller.go  poll.go  polling.go  preparation.go  prepare.go  recording.go  status.go  upload.go  uploading.go  utils.go
client/OAAS/: config.yml  youtube-auth.ps1
client/ahk/: base.ahk  get-coords.ahk  record-replay.ahk
client/release/: config.yml
oaas/: __init__.py  __main__.py  clients.py  queue.py
oaas/jobs/: __init__.py  replay.py
old_server/: .gitignore
old_server/test/: model_test.exs
poller/: README.md  discord.go  discord_utils.go  main.go  reddit.go
server/: .dockerignore  .gitignore  Dockerfile  README.md  create.go  db.go  discord.go  discord_commands.go  entrypoint.sh  http.go  job.go  jobs_create.go  jobs_status.go  main.go  maintenance.go  mix.exs  poll.go  reddit.go  utils.go  worker.go
server/config/: config.exs  example.toml
server/lib/: application.ex  db.ex  discord.ex  job.ex  jobs.ex  key.ex  keys.ex  model.ex  oaas.ex  queue.ex  reddit.ex  replay_farm.ex  router.ex  utils.ex  worker.ex  (+1 more)
shared/: shared.go
test/: test_client.py
(+50 files in other folders)
